<resources>
    <string name="app_name">FilesAndroid</string>

    <string name="action_settings">Settings</string>

    <string name="write_file">Записать файл</string>
    <string name="read_file">Прочесть файл</string>
    <string name="write_file_sd">Записать файл на SD</string>
    <string name="read_file_sd">Прочесть файл с SD</string>
    <string name="NewText">Наберите текст в поле (Будет записано в файл):</string>
    <string name="NewText2">В поле ниже выводится прочитанное из файла:</string>
    <string name="HintForEditText">Введите текст</string>
    <string name="FileName">FileName:</string>
</resources>
