<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnWriteSD"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/write_file_sd"
                    android:onClick="onclick"
                    android:layout_gravity="left">
                </Button>
                <Button
                    android:id="@+id/btnReadSD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_file_sd"
                    android:onClick="onclick"
                    android:layout_gravity="right">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnWrite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_file"
                    android:onClick="onclick"
                    android:layout_gravity="left"
                    android:layout_weight="5.38">
                </Button>

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:text="@string/read_file"
                    android:onClick="onclick"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal|fill"
                    android:layout_weight="0.42">
                </Button>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewText"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText1"
            android:layout_gravity="right"
            android:layout_weight="0.45"
            android:editable="true"
            android:enabled="true"
            android:inputType="textLongMessage"
            android:hint="@string/HintForEditText"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewText2"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="0.59" />

        <EditText
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editFilename"
            android:hint="@string/FileName" />

    </LinearLayout>

</RelativeLayout>
